Fix an issue of net.inet.igmp.stats handler. The header of (struct igmpstat) could be cleared by sysctl(3). This can be reproduced by "netstat -s -z -p igmp".

PR:	244584
MFC after:	1 week


git-svn-id: svn+ssh://svn.freebsd.org/base/head@358730 ccf9f872-aa2e-dd11-9fc8-001c23d0bc1f